test/bad/generics/def09.px

func f<A>(A x, A y: default(A)) def
    print x

print f(1)
